force-app/main/default/objects/Training__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the person who approved the training.</inlineHelpText>
    <label>Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_s</relationshipName>
    <type>Lookup</type>
</CustomField>