force-app/main/default/objects/Training__c/fields/Date_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Training__c</fullName>
    <inlineHelpText>Enter the date the training was completed.</inlineHelpText>
    <label>Date of Training</label>
    <type>Date</type>
</CustomField>