force-app/main/default/objects/Training__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the goal this training should roll up to.</inlineHelpText>
    <label>Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Training&apos;s</relationshipLabel>
    <relationshipName>Training_s</relationshipName>
    <type>Lookup</type>
</CustomField>