force-app/main/default/objects/Training__c/fields/Link_to_Training__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Training__c</fullName>
    <inlineHelpText>Enter the URL for the training here.</inlineHelpText>
    <label>Link to Training</label>
    <type>Url</type>
</CustomField>