force-app/main/default/objects/Training__c/fields/Person_Trained__c.field-meta.xml
<CustomField>
    <fullName>Person_Trained__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Should default to you.  If creating for someone else please select their name.</inlineHelpText>
    <label>Person Trained</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_s1</relationshipName>
    <type>Lookup</type>
</CustomField>