force-app/main/default/objects/Training__c/fields/Rate_your_training__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_training__c</fullName>
    <inlineHelpText>Select the number of stars (out of 5) for the training.</inlineHelpText>
    <label>Rate your training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>