force-app/main/default/objects/Training__c/fields/Training_Category__c.field-meta.xml
<CustomField>
    <fullName>Training_Category__c</fullName>
    <inlineHelpText>Select the training category or enter one.  Add a brief description of the training below.</inlineHelpText>
    <label>Training Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Education (enter description below)</fullName>
            </value>
            <value>
                <fullName>General Team Tools (Web ex, Slack, etc)</fullName>
            </value>
            <value>
                <fullName>Skills (Project Management, Lean, etc)</fullName>
            </value>
            <value>
                <fullName>Specialized Tools (Salesforce, JIRA,, etc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>