force-app/main/default/objects/Training__c/fields/Training_Comments__c.field-meta.xml
<CustomField>
    <fullName>Training_Comments__c</fullName>
    <inlineHelpText>Enter your thoughts about the training here.</inlineHelpText>
    <label>Training Comments</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>