force-app/main/default/objects/Training__c/fields/Training_Description__c.field-meta.xml
<CustomField>
    <fullName>Training_Description__c</fullName>
    <inlineHelpText>Enter a brief description of the training.</inlineHelpText>
    <label>Training Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>