force-app/main/default/objects/Training__c/fields/Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours__c</fullName>
    <inlineHelpText>Enter the number of hours spent on the training on the day selected.</inlineHelpText>
    <label>Training Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>