force-app/main/default/objects/Training__c/fields/Training_Rating__c.field-meta.xml
<CustomField>
    <fullName>Training_Rating__c</fullName>
    <formula>IMAGE( 
IF(TEXT(Rate_your_training__c) = &quot;1&quot; , &quot;/img/samples/stars_100.gif&quot;, 
IF(TEXT(Rate_your_training__c) = &quot;2&quot; , &quot;/img/samples/stars_200.gif&quot;, 
IF(TEXT(Rate_your_training__c) = &quot;3&quot; , &quot;/img/samples/stars_300.gif&quot;, 
IF(TEXT(Rate_your_training__c) = &quot;4&quot; , &quot;/img/samples/stars_400.gif&quot;,
IF(TEXT(Rate_your_training__c) = &quot;5&quot; , &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
))))), 

&quot;No Rating&quot;, 25,75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Rating</label>
    <type>Text</type>
</CustomField>