force-app/main/default/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <description>Please select one of the above options- this ties in to reporting for Goals.</description>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precipio Training</fullName>
            </value>
            <value>
                <fullName>Book Learning</fullName>
            </value>
            <value>
                <fullName>Other Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>